*** empty log message ***

--- a/help/general/grouping_pane.html
+++ b/help/general/grouping_pane.html
@@ -14,7 +14,7 @@
 
     <h2>Default</h2>
     The default tree allows grouping by field information. This grouping is used the most as it allows you to group
-    on year, category or any other field that is availabel in the module you are working in. You can group on multiple
+    on year, category or any other field that is available in the module you are working in. You can group on multiple
     fields, creating a leveled structure. In the example below the software items are grouped on container, category and
     year. How you can group on fields is explained in the next paragraph.
 
@@ -23,12 +23,15 @@
     <h3>Selecting fields</h3>
     From the "group by" menu you can select the field(s) on which the items should be grouped. 
     You can group on as many fields as you like.
-    <br><br><img src="./images/groupby.png" alt="" border="0"><br>
+    
+    <br><br><img src="./images/groupby.png" alt="" border="0"><br><br>
+    
     On the left hand side you find all the fields on which you can group. On the right hand side all fields
-    are shown on which the overview is currently grouped. Double click on a field to remove it from or to add it to 
-    the selection.<br>
-    Additionally you can change the group layering; if you want to group on "Categories" first, click it once to select and
-    use the green icons to move it all the way to the top. 
+    are shown on which the overview is currently grouped. <br><br>
+    Double click on a field to remove it from or to move a field to move it from the 'Available Fields' list to the 
+    'Selected Fields' list, or vice versa.<br><br>
+    Additionally you can change the group layering; if you want to group on 'Categories' first, click the field once 
+    to select it and use the green arrow icons to move it all the way to the top. 
     <br>
     Press Apply to activate the selected grouping.
 
