--- a/help/items/wizard.html
+++ b/help/items/wizard.html
@@ -28,7 +28,7 @@
      
     <br><br><img src="./images/wizard_steptwo.png" alt="" border="0"><br><br>
 
-    Make you modifications and either press "Finish" to store the item in Data Crow or "Finish &amp; New" to store the item and
+    Make your modifications and either press "Finish" to store the item in Data Crow or "Finish &amp; New" to store the item and
     restart the wizard. Select "Back" if you accidentally selected the wrong item in the previous step or press "Cancel" to exit 
     the wizard without saving anything. 
     
