--- a/help/modules/definingfields.html
+++ b/help/modules/definingfields.html
@@ -10,7 +10,7 @@
    (from the selected module type) and one with the newly defined fields. The predefined fields cannot be changed or removed. 
    You can however create, alter and remove fields from the New Field section (lower part of the screen). 
 	
-	<img src="./images/fieldoverview.png" />
+	<br><br><img src="./images/fieldoverview.png" /><br><br>
 	
 	<table cellspacing="2" cellpadding="2" border="0">
     	<tr><td>-</td>
@@ -21,12 +21,11 @@
     		<td><b>Change Field</b> Can be used to alter an existing field. When altering existing modules changes you can make here are limited.
     		In any case most changes can be achieved by using the settings, such as the <a href="../settings/fields.html">General Field Settings</a>.</td></tr>
 	</table>
-
 	
 	<h2>Creating a field</h2>
 	
-	To create a new field press the "add field" button. The following dialog will open: <br>
-	<img src="./images/dialog_definefield.jpg" />
+	To create a new field press the "add field" button. The following dialog will open: 
+	<br><br><img src="./images/dialog_definefield.jpg" />
 	
 	<h3>Name</h3>
 	The name of the field as displayed on screen. 
