--- a/help/settings/http.html
+++ b/help/settings/http.html
@@ -9,12 +9,14 @@
 
 	If you are not behind a proxy and / or you have no problems using the online search you can stay away from these settings.
 	In case you are behind a proxy you configure it here.
+    
+    <br><br><img src="./images/http.png" alt="" border="0"><br><br>
+
+	<h2>Proxy Server name</h2>
+	The name of the proxy server must be specified when you are behind a proxy server.
 
 	<h2>Proxy Server port</h2>
 	If you are behind a proxy server, you must specify the proxy server port number. By default, the port number is set to 0 (no proxy). Most proxy servers will be set to port "8088"
-
-	<h2>Proxy Server name</h2>
-	The name of the proxy server must be specified when you are behind a proxy server
 
 	<h2>Proxy username</h2>
 	If needed, input the username needed for the entered proxy server
