--- a/help/general/screen_layout.html
+++ b/help/general/screen_layout.html
@@ -18,22 +18,26 @@
     The active module is highlighted.<br>
 	<img src="./images/view_modulelist.jpg" alt="" border="0"><br><br>
     Some modules have sub modules assigned to them. For example, the movies module has a sub module called actors. 
-    Click on the small bar at the bottom of the module button, called "Select Module". This will allow you to select any of the sub modules.<br>
-    <img src="./images/menubar_submodule.png" alt="" border="0"><br>
+    These sub modules support the main module; the Actors can be assigned to movies.
+
+    <br><br><img src="./images/menubar_submodule.png" alt="" border="0"><br><br>
+
+    Click on the small bar at the bottom of the module button, called "Select Module". This will allow you to select 
+    any of the sub modules.<br>
     
 	<h2>Grouping pane</h2>
 	Allows for grouping the items. <a href="grouping_pane.html">more about this.</a>
 
 	<h2>Item tab</h2>
-    Existing items are displayed in this pane. The displayed items can be opened, updated or deleted.<br>
+    Existing items are displayed in this pane. The displayed items can be opened, updated or deleted.
 
-	<img src="./images/view_itemtab.jpg" alt="" border="0">
+	<br><br><img src="./images/view_itemtab.jpg" alt="" border="0">
 
 	<h2>New item tab </h2>
 	Unsaved, new items are added here. New items can be imported from the internet or extracted from files or CD drives.
-    Additionally you can quickly add new items from here yourself. You can find an explanation <a href="../general/views.html">here</a>.<br>
+    Additionally you can quickly add new items from here yourself. You can find an explanation <a href="../general/views.html">here</a>.
 
-	<img src="./images/view_newitemtab.jpg" alt="" border="0">
+	<br><br><img src="./images/view_newitemtab.jpg" alt="" border="0">
 
 	<h2>Charts</h2>
 	Create a simple chart. <a href="../charts/charts.html">more about this.</a>
