*** empty log message ***

--- a/help/onlinesearch/onlinesearch.html
+++ b/help/onlinesearch/onlinesearch.html
@@ -8,7 +8,7 @@
 
 	Data Crow can save you time by retrieving information about an item from an online database such as Amazon, IMDb, or freedb.
 
-    <br><img src="./images/onlinesearch.jpg" alt="" border="0">
+    <br><br><img src="./images/onlinesearch.jpg" alt="" border="0">
 
 	<h2>Starting a search</h2>
 	The online search is available from the item form (to update an existing item), from the menu bar and the tool bar.
@@ -23,8 +23,8 @@
 
 	To stop a search press "stop". The search is then stopped and you can start a new search. To clear previous found results, press "clear".
 
-    <h2>Options</h2>
-    There are several options for you to consider.<br>
+    <h2>Settings</h2>
+    There are several settings for you to consider.<br>
 
     <h3>Values to retrieve</h3>
     When searching for new items you can specify for which fields values should be retrieved. To do this click the settings button and select
