--- a/help/reports/reporting.html
+++ b/help/reports/reporting.html
@@ -9,7 +9,10 @@
     <i>Menu path: Tools &gt; Create Report</i><br>
     <i>or: right-click on selected items in view and select Create Report</i><br><br>
 
-    The reporting tool creates PDF amd HTML files based on items retrieved via a search.
+    The reporting tool creates PDF amd HTML files based on items in the <a href="../items/views.html">view</a>.
+    
+    <br><br><img src="./images/reporting.png" alt="" border="0"><br><br>
+    
     To create a report select a format (either PDF or HTML) and a report type from the dropdown box. Select a target file and press "run" to start the report generation.
 
     <br><br>
