*** empty log message ***

--- a/help/tools/associate_name_rewriter.html
+++ b/help/tools/associate_name_rewriter.html
@@ -7,7 +7,10 @@
     <h1>Person Name Rewriting</h1>
     <i>Menu path: Tools &gt; Name Rewriter</i><br><br>
     
-	This tool enables Data Crow to rewrite the names of new persons and / or rewrite all names for all persons of this module.<br>
+	This tool enables Data Crow to rewrite the names of new persons and / or rewrite all names for all persons of this module.
+	
+	<br><br><img src="./images/namerewriter.png" /><br><br>
+	
 	
     <h2>Enabled</h2>
  	Check the field enabled to rewrite titles for new items (and when updating existing titles). Disable this functionality by unchecking the enabled box (default).
