--- a/help/tools/auto_numbering.html
+++ b/help/tools/auto_numbering.html
@@ -6,7 +6,14 @@
     <h1>Auto numbering</h1>
     <i>Menu path: Tools &gt; Auto Numbering</i><br><br>
     
-	Gives an item a unique number. The number can be overwritten by you afterwards. There are several option available for the auto numbering feature.
+    You can use this tool to number your items. It's quite easy to number your items and also to renumber items if you want to.
+	
+	<br><br><img src="./images/autonumberer.png" /> <br><br>
+	
+	There are several option available for the auto numbering feature. 
+
+    <h2>Field</h2>
+    The fields you can select are the custom fields. You can rename these fields in the <a href="../settings/fields.html">General Field Settings</a>.
 
 	<h2>Enabled</h2>
 	Enables autonumbering for this field. The field will also be enabled and made visible (if it is not already so).
@@ -21,8 +28,8 @@
     <h2>Renumber Modus</h2>
 	There are two types of renumbering available; all items can be given a new number or only items with no number are assigned a number.
 
-    <h2>Order by</h2>
-    You can define the ordering for the renumbering action.
+    <h2>Sort on</h2>
+    You can define the ordering for the renumbering action.<br><br>
 
   </body>
 </html>
