--- a/help/tools/mass_update.html
+++ b/help/tools/mass_update.html
@@ -6,7 +6,13 @@
     <h1>Mass Update</h1>
     <i>Menu path: Tools &gt; Mass Update</i><br><br>
     
-	This tools allows you to update the information stored in Data Crow with the (updated) information from your files (such as mp3's) and/or allows you to use an online service to retrieve missing information. The availability of online search and/or the file re-parsing depend on the selected module. Mass update might even not be available altogether for the selected module.
+	This tools allows you to update the information stored in Data Crow with the (updated) information from your files (such as mp3's) 
+	and/or allows you to use an online service to retrieve missing information. 
+	
+	<br><br><img src="./images/massupdate.png" /> <br><br>
+	
+	The availability of online search and/or the file re-parsing depend on the selected module. Mass update might even not 
+	be available altogether for the selected module.
 	
 	<br><br>
 	A combination of file re-parsing and online searching can be used to update all the items shown in the view.
