--- a/help/tools/item_export.html
+++ b/help/tools/item_export.html
@@ -28,12 +28,16 @@
   In the second step of the wizard you can choose to export the images. This is recommended as the images are then stored in a sub folder
   of the location of the report file.
 
-  <ul>
-  <li /><i>Copy Images</i><br>Copies the images to a sub folder.
-        If you choose not to export the images a link to the original location of the image will be exported.
-  <li /><i>Scale Images</i><br>You can choose to store a smaller version of the original image. Specify the width and the height.
-        The original proportions are kept so that will not end up with malformed image sizes.
-  </ul>
+  <table cellspacing="2" cellpadding="2" border="0">
+    <tr><td>-</td>
+        <td><b>Copy Images</b>. 
+        Copies the images to a sub folder.
+        If you choose not to export the images a link to the original location of the image will be exported.</td></tr>
+    <tr><td>-</td>
+        <td><b>Scale Images</b>. 
+        You can choose to store a smaller version of the original image. Specify the width and the height.
+        The original proportions are kept so that will not end up with malformed image sizes.</td></tr>
+  </table><br>
 
   <h3>Text length</h3>
   You can indicate the maximum text length. The value "0" means that text will not be cut. Data Crow will try and find the nice position possible
@@ -41,11 +45,9 @@
 
 
   <h2>Limitations</h2>
-  <ul>
-  <li />The text import is not capable of exporting relationships between items.
-  <li />The text import will remove new line characters from the values. Each line of the text file will contain just one item.
-  </ul>
-
+  
+  1. The text import is not capable of exporting relationships between items. <br>
+  2. The text import will remove new line characters from the values. Each line of the text file will contain just one item.
 
   </body>
 </html>
