--- a/help/tools/title_rewriter.html
+++ b/help/tools/title_rewriter.html
@@ -8,6 +8,9 @@
     <i>Menu path: Tools &gt; Title Rewriter</i><br><br>
     
 	This tool enables Data Crow to rewrite titles of new items and / or rewrite all titles for all items of this module.<br>
+	
+	<br><br><img src="./images/titlerewriter.png" /><br><br>
+	
 	Rewriting titles is preferable for sorting and reporting. Member words can be moved to the back of the title, transforming titles like "the house" and "the tree" to "house, the" and "tree, the"
 
     <h2>Enabled</h2>
