*** empty log message ***

--- a/help/general/default_modules.html
+++ b/help/general/default_modules.html
@@ -15,55 +15,55 @@
     <br>
     
     <table cellspacing="2" cellpadding="2" border="0">
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_software.png"></td>
     		<td><b>Software Module.</b> 
             The software module can be used to register both software programs and games. There are various online services available to update or find
             your items online, such as Amazon and MobyGames.com. Additionally you can import the file information of any file. Apart from the software titles 
             Data Crow also keeps track of the developers and the publishers of the software.            
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_movie.png"></td>
     		<td><b>Movie Module.</b> 
             Allows you to register both your DVD/Blu-ray collection and your movie file collection (DIVX, XVID, etc.). The online services, such as IMDB.com, 
             are capable of retrieving detailed movie information including detailed information on each actor and director.
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_image.png"></td>
     		<td><b>Image Module.</b> 
             With the images module you can register your image file collection (JPEG, BMP, GIF, etc). The Image module does not provide any online services but 
             can extract detailed information from your image files using the file importer.
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_container.png"></td>
     		<td><b>Container Module.</b> 
             A container is the physical location of an item. A container can represent a CD-case, closet, building or anything else that identifies the location
             of an item. It is possible to create a hierarchie of containers, such as: Building - Floor - Closet - Shelf - Spot on shelf. 
             If supported by the module, an item can be assigned to multiple containers. The container module has no file importers or online services available.   
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_book.png"></td>
     		<td><b>Books Module.</b> 
             The book module can be used to register your books and your eBooks (PDF). The Amazon, Bol.com and other online services make it easy to find information
             on your books. The file importer can import information on eBooks. Book publishers and authors are maintained in seperate modules making it possible to 
             store detailed information on each of these persons / companies.
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_audiocd.png"></td>
     		<td><b>Audio CD Module.</b> 
             Solely meant for registering Audio CDs. This module has online services available and can extract information from an inserted CD (Tools > Retrieve CD information).
             It does not have a file importer available. Apart from the Audio CD itself this module also manages the music artists. These music artists are shared with the
             Music Album Module.
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_musicalbum.png"></td>
     		<td><b>Music Album Module.</b> 
             In this module you can register your file based music collection. It has the same the online services available as the Audio CD module. 
             Unlike the Audio CD module this module has a very capable file importer available which can extract information from MP3s and other music files.
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_media.png"></td>
     		<td><b>Media Module.</b> 
             The media module gives you access to all media items. It shows items of each of the media modules, such as software titles, movies and audio CDs.
             A convenient place to oversee your whole media collection from one place.
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_person.png"></td>
     		<td><b>Contact Person Module.</b> 
             This module allows you to maintain your friends and family members who can borrow your items. It does not have any online services or file importers available.
             </td></tr>
-    	<tr><td>-</td>
+    	<tr><td><img src="./images/module_user.png"></td>
     		<td><b>User Module.</b> 
             This module is explained in detail in the <a href="../security/security.html">security chapter</a>. This module maintains the users who can log into Data Crow 
             and their permissions.
