--- a/help/modules/altermodulewizard.html
+++ b/help/modules/altermodulewizard.html
@@ -8,8 +8,9 @@
     <i>Menu path: Modules &gt; Alter Module Wizard</i><br><br>
 
 	In the main screen of Data Crow you'll find a menu called "modules". This menu contains wizards to customize, create and relate modules. 
-	In this chapter we will dive into the alteration of an existing module. This wizard is almost exactly the same as the "Create Module Wizard".
-	The only difference is that not all infomation is allowed to be changed. 
+	In this chapter the alteration of an existing module is covered. This wizard is almost exactly the same as the 
+    <a href="../modules/createmodulewizard.html">create module wizard</a>.
+	The only difference is that not all information is allowed to be changed. 
 	
 	<h2>Starting the wizard</h2>
 	Start the wizard by selecting "Alter Module Wizard" from the modules menu.
