--- a/help/modules/copymodulewizard.html
+++ b/help/modules/copymodulewizard.html
@@ -16,11 +16,17 @@
 
     <h2>Limitations</h2>
 
-    <li/> Parent and child relations are not copied. If you want to copy the Audio CD module for example you will have to make a copy of the Audio Track module as well.
-    After you have copied both you can then create the parent child relationship by using the <a href="./relatemodulewizard.html">Relate Module Wizard</a>.
-    <br><br>
-    <li/> The data of the module is not copied. You can however export the items of the original module by using the <a href="../tools/item_export.html">Item Export Wizard</a>
-    and import these in the copied module with the <a href="../tools/item_import.html">Item Import Wizard</a>.
-
+    <table>
+        <tr><td>-</td>
+        <td>
+        Parent and child relations are not copied. If you want to copy the Audio CD module for example you will have to make a copy of the Audio Track module as well.
+        After you have copied both you can then create the parent child relationship by using the <a href="./relatemodulewizard.html">Relate Module Wizard</a>.  
+        </td></tr>
+        <tr><td>-</td>
+        <td>
+        The data of the module is not copied. You can however export the items of the original module by using the <a href="../tools/item_export.html">Item Export Wizard</a>
+        and import these in the copied module with the <a href="../tools/item_import.html">Item Import Wizard</a>.
+        </td></tr>
+    </table>
   </body>
 </html>
