--- a/help/modules/createmodulewizard.html
+++ b/help/modules/createmodulewizard.html
@@ -10,11 +10,15 @@
 	In the main screen of Data Crow you'll find a menu called "modules". This menu contains wizards to customize, create and relate modules. 
 	In this chapter we will dive into the creation of you very own module. 
 	
+	<br><br><img src="./images/module_create.png">
+	
 	<h2>Starting the wizard</h2>
 	Start the wizard by selecting "Create Module Wizard" from the modules menu.
 	
 	<h2>Selecting a module type</h2>
 	There are 3 types of modules to choose from; property module, media module and "other" module.
+	
+	<br><br><img src="./images/module_create_type.png">
 	
 	<h3>Property Modules</h3>
 	A property is a very simple module. It has 2 important predefined fields; "name" and "icon" and cannot be extended with any other field. 
@@ -29,9 +33,12 @@
 	If any of the above doesn't suite you, go for this module type. This module type has no predefined fields (apart from the ID field which is
 	required for all modules) making this the perfect candidate to create a module from scratch.
     
+    <h3>Person Modules</h3>
+    Want to have a module representing persons? Default fields: name, first name, last name, name, photo, web page.
+    
     <h2>Filling the basic information</h2>
     In this step you will name the module and its item(s), select the icons and enter a description. The name of the module and the object names
-    cannot be changed aftwerwards so pick these carefully. <br>
+    cannot be changed afterwards so pick these carefully. <br>
     <table cellspacing="2" cellpadding="2" border="0">
     	<tr><td>-</td>
     		<td><b>Description</b> A generic description of the module. This description is displayed in the module bar when hovering with the mouse over the module.</td></tr>
@@ -52,7 +59,7 @@
     The following options are available. Note that the available options can vary between module types.
     <table cellspacing="2" cellpadding="2" border="0">
     	<tr><td>-</td>
-    		<td><b>Items can be assigned to a container.</b> Enabling this option makes the container dropdown available for items of this module. 
+    		<td><b>Items can be assigned to a container.</b> Enabling this option makes the container drop-down available for items of this module. 
     		This allows items to be stored in containers. A container can represent a closet, a CD case, a box or anything else.</td></tr>
     	<tr><td>-</td>
     		<td><b>Items represent actual files.</b> If enabled file fields are added to the items of this module thus making it possible for your items
