--- a/help/modules/exportmodulewizard.html
+++ b/help/modules/exportmodulewizard.html
@@ -14,35 +14,50 @@
     The last step starts the actual export.
 
     <h2>The following is exported</h2>
-    <ul>
-    <li /> The main (custom) module.
-    <li /> The related modules.
-    <li /> Reports that you have created (xsl scripts, located in the reports folder of Data Crow).
-    <li /> Settings. All the settings you have done for the specific modules are exported and used as the default settings.
-    <li /> Optionally the items of both the main module and all the related modules are exported.
-    </ul>
+    
+    <table cellspacing="2" cellpadding="2" border="0">
+        <tr><td>-</td>
+        <td>The main (custom) module.</td></tr>
+        <tr><td>-</td>
+        <td>The related modules.</td></tr>
+        <tr><td>-</td>
+        <td>Reports that you have created (xsl scripts, located in the reports folder of Data Crow).</td></tr>        
+        <tr><td>-</td>
+        <td>Settings. All the settings you have done for the specific modules are exported and used as the default settings.</td></tr>    
+        <tr><td>-</td>
+        <td>Optionally the items of both the main module and all the related modules are exported.</td></tr>    
+    </table>  
 
 	<h2>Options</h2>
-	<ul>
-    <li /><i>Export the items of the main module</i><br>
+	
+	<table cellspacing="2" cellpadding="2" border="0">
+        <tr><td>-</td>
+        <td><b>Export the items of the main module</b>
           The main module is the module you selected in the very first step of this wizard. Check this option in case you want to distribute not only
           the module definition but also all the items that come with the module.
-
-    <li /><i>Export the items of the related modules</i><br>
+        </td></tr>
+        <tr><td>-</td>
+        <td><b>Export the items of the related modules</b>
           Related modules are all modules that belong / relate to the main module which you selected in the very first step. A related module could, for
           example, be a category module. Even if you did not choose to export the items of the main module it can be beneficial to export the items of the
           related modules. This would give the other users to chance to fill the main module with their own items but at the same time allow them to use
           the specific properties you have provided for them.
-    </ul>
+        </td></tr>
+    </table>  
 
     <h2>Limitation</h2>
-    <ul>
-    <li /> Non custom modules, like the Software module, cannot be exported. The wizard is solely meant for custom made modules
-           (by using the <a href="./createmodulewizard.html">Create Module Wizard</a>)
-    <li /> Only high level modules can be exported. The modules related to this module will be exported as well. A high level module
-           is a module that is displayed in the module panel like the Software and Book module.
-    </ul>
-
-
+    
+        <table>
+        <tr><td>-</td>
+        <td>
+        Non custom modules, like the Software module, cannot be exported. The wizard is solely meant for custom made modules
+        (by using the <a href="./createmodulewizard.html">Create Module Wizard</a>).  
+        </td></tr>
+        <tr><td>-</td>
+        <td>
+        Only high level modules can be exported. The modules related to this module will be exported as well. A high level module
+        is a module that is displayed in the module panel like the Software and Book module.
+        </td></tr>
+    </table>
   </body>
 </html>
