--- a/help/modules/importmodulewizard.html
+++ b/help/modules/importmodulewizard.html
@@ -7,21 +7,29 @@
     <h1>Importing a module</h1>
     <i>Menu path: Modules &gt; Import Module Wizard</i><br><br>
 
-    This wizard can be found in the "modules" menu of the main screen and can be used to import a module which was exported using the <a href="./exportmodulewizard.html">Export Module Wizard</>.
+    This wizard can be found in the "modules" menu of the main screen and can be used to import a module which was exported using the <a href="./exportmodulewizard.html">Export Module Wizard</a>.
 	The wizard is powerful yet very simple to use. In the first step you select the module zip file which you would like to import. In the next and final step the import is started.
 
 	<h2>The following is imported</h2>
-    <ul>
-    <li /> The main module and all its related modules.
-    <li /> Reports that were specifically created for the module.
-    <li /> The default settings.
-    <li /> The items belonging to the modules.
-    </ul>
+
+    <table cellspacing="2" cellpadding="2" border="0">
+        <tr><td>-</td>
+        <td>The main module and all its related modules.
+        </td></tr>
+        <tr><td>-</td>
+        <td>Reports that were specifically created for the module.
+        </td></tr>
+        <tr><td>-</td>
+        <td>The default settings.
+        </td></tr>
+        <tr><td>-</td>
+        <td>The items belonging to the modules.
+        </td></tr>
+    </table>  
 
 	<h2>Limitation</h2>
-	<ul>
-	<li /> Data Crow needs to be restarted for the changes to become apparent.
-	</ul>
+	
+	Data Crow needs to be restarted for the changes to become apparent.
 
   </body>
 </html>
