--- a/help/settings/cardview.html
+++ b/help/settings/cardview.html
@@ -5,7 +5,7 @@
   <body>
   
     <h1>Card view settings</h1>
-    <i>Menu path: Settings &gt; View Settings</i><br>
+    <i>Menu path: Settings &gt; View Settings</i><br><br>
   
     The view settings allow you to change the colors and the information shown in the view.
   
