*** empty log message ***

--- a/help/tools/item_import.html
+++ b/help/tools/item_import.html
@@ -27,7 +27,11 @@
     <tr><td>-</td>
         <td><b>Value separator</b>. 
         For CSV imports you need to indicate which character was used to separate the values of the items. Set value separator to "TAB" in case
-  tabs were used.</td></tr>
+        tabs were used.</td></tr>
+    <tr><td>-</td>
+        <td><b>Try and match imported items</b>. 
+        If selected, Data Crow will try and check whether the item already exists in the database. If so, it will merge the information 
+        of the two items.</td></tr>        
   </table><br>
 
   <h2>Source field mappings</h2>
